parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> list
Rule 1     list -> empty
Rule 2     list -> list newline
Rule 3     list -> list defn newline
Rule 4     list -> list asgn newline
Rule 5     list -> list stmt newline
Rule 6     list -> list expr newline
Rule 7     list -> list error newline
Rule 8     list -> list COMMENT newline
Rule 9     asgn -> VAR ASSIGN expr
Rule 10    asgn -> VAR ADDEQ expr
Rule 11    asgn -> VAR SUBEQ expr
Rule 12    asgn -> VAR MULEQ expr
Rule 13    asgn -> VAR DIVEQ expr
Rule 14    asgn -> VAR MODEQ expr
Rule 15    stmt -> expr
Rule 16    stmt -> RETURN
Rule 17    stmt -> RETURN expr
Rule 18    stmt -> PRINT prlist
Rule 19    stmt -> WHILE LPARENT cond RPARENT stmt end
Rule 20    stmt -> FOR LPARENT cond SEMICOLON cond SEMICOLON cond RPARENT stmt end
Rule 21    stmt -> IF LPARENT cond RPARENT stmt end
Rule 22    stmt -> IF LPARENT cond RPARENT stmt ELSE stmt end
Rule 23    stmt -> LBRACKET stmtlist RBRACKET
Rule 24    end -> <empty>
Rule 25    begin -> <empty>
Rule 26    cond -> expr
Rule 27    stmtlist -> empty
Rule 28    stmtlist -> stmtlist newline
Rule 29    stmtlist -> stmtlist stmt
Rule 30    expr -> data
Rule 31    expr -> asgn
Rule 32    expr -> unaryop
Rule 33    expr -> binaryop
Rule 34    expr -> LPARENT expr RPARENT
Rule 35    expr -> callfunc
Rule 36    data -> FLOAT
Rule 37    data -> CONSTANT
Rule 38    data -> VAR
Rule 39    unaryop -> UNARYMINUS expr
Rule 40    unaryop -> INC VAR
Rule 41    unaryop -> DEC VAR
Rule 42    unaryop -> VAR INC
Rule 43    unaryop -> VAR DEC
Rule 44    unaryop -> NOT expr
Rule 45    binaryop -> mathop
Rule 46    binaryop -> logicop
Rule 47    mathop -> expr EXP expr
Rule 48    mathop -> expr PLUS expr
Rule 49    mathop -> expr MINUS expr
Rule 50    mathop -> expr TIMES expr
Rule 51    mathop -> expr DIVIDE expr
Rule 52    mathop -> expr MOD expr
Rule 53    logicop -> expr LT expr
Rule 54    logicop -> expr GT expr
Rule 55    logicop -> expr LE expr
Rule 56    logicop -> expr GE expr
Rule 57    logicop -> expr EQ expr
Rule 58    logicop -> expr NE expr
Rule 59    logicop -> expr OR expr
Rule 60    logicop -> expr AND expr
Rule 61    callfunc -> BLTIN begin LPARENT expr RPARENT
Rule 62    callfunc -> VAR begin LPARENT arglist RPARENT
Rule 63    prlist -> expr
Rule 64    prlist -> STRING
Rule 65    prlist -> prlist COMMA expr
Rule 66    prlist -> prlist COMMA STRING
Rule 67    defn -> FUNC procname LPARENT formals RPARENT stmt
Rule 68    defn -> PROC procname LPARENT formals RPARENT stmt
Rule 69    procname -> VAR
Rule 70    formals -> empty
Rule 71    formals -> VAR
Rule 72    formals -> formals COMMA VAR
Rule 73    arglist -> empty
Rule 74    arglist -> expr
Rule 75    arglist -> arglist COMMA expr
Rule 76    empty -> <empty>
Rule 77    newline -> NEWLINE

Terminals, with rules where they appear

ADDEQ                : 10
AND                  : 60
ASSIGN               : 9
BLTIN                : 61
COMMA                : 65 66 72 75
COMMENT              : 8
CONSTANT             : 37
DEC                  : 41 43
DIVEQ                : 13
DIVIDE               : 51
ELSE                 : 22
EQ                   : 57
EXP                  : 47
FLOAT                : 36
FOR                  : 20
FUNC                 : 67
GE                   : 56
GT                   : 54
IF                   : 21 22
INC                  : 40 42
LBRACKET             : 23
LE                   : 55
LPARENT              : 19 20 21 22 34 61 62 67 68
LT                   : 53
MINUS                : 49
MOD                  : 52
MODEQ                : 14
MULEQ                : 12
NE                   : 58
NEWLINE              : 77
NOT                  : 44
OR                   : 59
PLUS                 : 48
PRINT                : 18
PROC                 : 68
RBRACKET             : 23
RETURN               : 16 17
RPARENT              : 19 20 21 22 34 61 62 67 68
SEMICOLON            : 20 20
STRING               : 64 66
SUBEQ                : 11
TIMES                : 50
UNARYMINUS           : 39
VAR                  : 9 10 11 12 13 14 38 40 41 42 43 62 69 71 72
WHILE                : 19
error                : 7

Nonterminals, with rules where they appear

arglist              : 62 75
asgn                 : 4 31
begin                : 61 62
binaryop             : 33
callfunc             : 35
cond                 : 19 20 20 20 21 22
data                 : 30
defn                 : 3
empty                : 1 27 70 73
end                  : 19 20 21 22
expr                 : 6 9 10 11 12 13 14 15 17 26 34 39 44 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 63 65 74 75
formals              : 67 68 72
list                 : 2 3 4 5 6 7 8 0
logicop              : 46
mathop               : 45
newline              : 2 3 4 5 6 7 8 28
prlist               : 18 65 66
procname             : 67 68
stmt                 : 5 19 20 21 22 22 29 67 68
stmtlist             : 23 28 29
unaryop              : 32

Parsing method: LALR

state 0

    (0) S' -> . list
    (1) list -> . empty
    (2) list -> . list newline
    (3) list -> . list defn newline
    (4) list -> . list asgn newline
    (5) list -> . list stmt newline
    (6) list -> . list expr newline
    (7) list -> . list error newline
    (8) list -> . list COMMENT newline
    (76) empty -> .

    error           reduce using rule 76 (empty -> .)
    COMMENT         reduce using rule 76 (empty -> .)
    NEWLINE         reduce using rule 76 (empty -> .)
    FUNC            reduce using rule 76 (empty -> .)
    PROC            reduce using rule 76 (empty -> .)
    VAR             reduce using rule 76 (empty -> .)
    RETURN          reduce using rule 76 (empty -> .)
    PRINT           reduce using rule 76 (empty -> .)
    WHILE           reduce using rule 76 (empty -> .)
    FOR             reduce using rule 76 (empty -> .)
    IF              reduce using rule 76 (empty -> .)
    LBRACKET        reduce using rule 76 (empty -> .)
    LPARENT         reduce using rule 76 (empty -> .)
    FLOAT           reduce using rule 76 (empty -> .)
    CONSTANT        reduce using rule 76 (empty -> .)
    UNARYMINUS      reduce using rule 76 (empty -> .)
    INC             reduce using rule 76 (empty -> .)
    DEC             reduce using rule 76 (empty -> .)
    NOT             reduce using rule 76 (empty -> .)
    BLTIN           reduce using rule 76 (empty -> .)
    $end            reduce using rule 76 (empty -> .)

    list                           shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> list .
    (2) list -> list . newline
    (3) list -> list . defn newline
    (4) list -> list . asgn newline
    (5) list -> list . stmt newline
    (6) list -> list . expr newline
    (7) list -> list . error newline
    (8) list -> list . COMMENT newline
    (77) newline -> . NEWLINE
    (67) defn -> . FUNC procname LPARENT formals RPARENT stmt
    (68) defn -> . PROC procname LPARENT formals RPARENT stmt
    (9) asgn -> . VAR ASSIGN expr
    (10) asgn -> . VAR ADDEQ expr
    (11) asgn -> . VAR SUBEQ expr
    (12) asgn -> . VAR MULEQ expr
    (13) asgn -> . VAR DIVEQ expr
    (14) asgn -> . VAR MODEQ expr
    (15) stmt -> . expr
    (16) stmt -> . RETURN
    (17) stmt -> . RETURN expr
    (18) stmt -> . PRINT prlist
    (19) stmt -> . WHILE LPARENT cond RPARENT stmt end
    (20) stmt -> . FOR LPARENT cond SEMICOLON cond SEMICOLON cond RPARENT stmt end
    (21) stmt -> . IF LPARENT cond RPARENT stmt end
    (22) stmt -> . IF LPARENT cond RPARENT stmt ELSE stmt end
    (23) stmt -> . LBRACKET stmtlist RBRACKET
    (30) expr -> . data
    (31) expr -> . asgn
    (32) expr -> . unaryop
    (33) expr -> . binaryop
    (34) expr -> . LPARENT expr RPARENT
    (35) expr -> . callfunc
    (36) data -> . FLOAT
    (37) data -> . CONSTANT
    (38) data -> . VAR
    (39) unaryop -> . UNARYMINUS expr
    (40) unaryop -> . INC VAR
    (41) unaryop -> . DEC VAR
    (42) unaryop -> . VAR INC
    (43) unaryop -> . VAR DEC
    (44) unaryop -> . NOT expr
    (45) binaryop -> . mathop
    (46) binaryop -> . logicop
    (61) callfunc -> . BLTIN begin LPARENT expr RPARENT
    (62) callfunc -> . VAR begin LPARENT arglist RPARENT
    (47) mathop -> . expr EXP expr
    (48) mathop -> . expr PLUS expr
    (49) mathop -> . expr MINUS expr
    (50) mathop -> . expr TIMES expr
    (51) mathop -> . expr DIVIDE expr
    (52) mathop -> . expr MOD expr
    (53) logicop -> . expr LT expr
    (54) logicop -> . expr GT expr
    (55) logicop -> . expr LE expr
    (56) logicop -> . expr GE expr
    (57) logicop -> . expr EQ expr
    (58) logicop -> . expr NE expr
    (59) logicop -> . expr OR expr
    (60) logicop -> . expr AND expr

    error           shift and go to state 30
    COMMENT         shift and go to state 10
    NEWLINE         shift and go to state 12
    FUNC            shift and go to state 19
    PROC            shift and go to state 32
    VAR             shift and go to state 20
    RETURN          shift and go to state 3
    PRINT           shift and go to state 6
    WHILE           shift and go to state 5
    FOR             shift and go to state 14
    IF              shift and go to state 23
    LBRACKET        shift and go to state 4
    LPARENT         shift and go to state 11
    FLOAT           shift and go to state 26
    CONSTANT        shift and go to state 7
    UNARYMINUS      shift and go to state 27
    INC             shift and go to state 33
    DEC             shift and go to state 8
    NOT             shift and go to state 31
    BLTIN           shift and go to state 18

    binaryop                       shift and go to state 29
    unaryop                        shift and go to state 15
    expr                           shift and go to state 24
    callfunc                       shift and go to state 25
    newline                        shift and go to state 16
    stmt                           shift and go to state 17
    asgn                           shift and go to state 13
    mathop                         shift and go to state 28
    logicop                        shift and go to state 9
    data                           shift and go to state 21
    defn                           shift and go to state 22

state 2

    (1) list -> empty .

    error           reduce using rule 1 (list -> empty .)
    COMMENT         reduce using rule 1 (list -> empty .)
    NEWLINE         reduce using rule 1 (list -> empty .)
    FUNC            reduce using rule 1 (list -> empty .)
    PROC            reduce using rule 1 (list -> empty .)
    VAR             reduce using rule 1 (list -> empty .)
    RETURN          reduce using rule 1 (list -> empty .)
    PRINT           reduce using rule 1 (list -> empty .)
    WHILE           reduce using rule 1 (list -> empty .)
    FOR             reduce using rule 1 (list -> empty .)
    IF              reduce using rule 1 (list -> empty .)
    LBRACKET        reduce using rule 1 (list -> empty .)
    LPARENT         reduce using rule 1 (list -> empty .)
    FLOAT           reduce using rule 1 (list -> empty .)
    CONSTANT        reduce using rule 1 (list -> empty .)
    UNARYMINUS      reduce using rule 1 (list -> empty .)
    INC             reduce using rule 1 (list -> empty .)
    DEC             reduce using rule 1 (list -> empty .)
    NOT             reduce using rule 1 (list -> empty .)
    BLTIN           reduce using rule 1 (list -> empty .)
    $end            reduce using rule 1 (list -> empty .)


state 3

    (16) stmt -> RETURN .
    (17) stmt -> RETURN . expr
    (30) expr -> . data
    (31) expr -> . asgn
    (32) expr -> . unaryop
    (33) expr -> . binaryop
    (34) expr -> . LPARENT expr RPARENT
    (35) expr -> . callfunc
    (36) data -> . FLOAT
    (37) data -> . CONSTANT
    (38) data -> . VAR
    (9) asgn -> . VAR ASSIGN expr
    (10) asgn -> . VAR ADDEQ expr
    (11) asgn -> . VAR SUBEQ expr
    (12) asgn -> . VAR MULEQ expr
    (13) asgn -> . VAR DIVEQ expr
    (14) asgn -> . VAR MODEQ expr
    (39) unaryop -> . UNARYMINUS expr
    (40) unaryop -> . INC VAR
    (41) unaryop -> . DEC VAR
    (42) unaryop -> . VAR INC
    (43) unaryop -> . VAR DEC
    (44) unaryop -> . NOT expr
    (45) binaryop -> . mathop
    (46) binaryop -> . logicop
    (61) callfunc -> . BLTIN begin LPARENT expr RPARENT
    (62) callfunc -> . VAR begin LPARENT arglist RPARENT
    (47) mathop -> . expr EXP expr
    (48) mathop -> . expr PLUS expr
    (49) mathop -> . expr MINUS expr
    (50) mathop -> . expr TIMES expr
    (51) mathop -> . expr DIVIDE expr
    (52) mathop -> . expr MOD expr
    (53) logicop -> . expr LT expr
    (54) logicop -> . expr GT expr
    (55) logicop -> . expr LE expr
    (56) logicop -> . expr GE expr
    (57) logicop -> . expr EQ expr
    (58) logicop -> . expr NE expr
    (59) logicop -> . expr OR expr
    (60) logicop -> . expr AND expr

  ! shift/reduce conflict for LPARENT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CONSTANT resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for UNARYMINUS resolved as shift
  ! shift/reduce conflict for INC resolved as shift
  ! shift/reduce conflict for DEC resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for BLTIN resolved as shift
    RBRACKET        reduce using rule 16 (stmt -> RETURN .)
    NEWLINE         reduce using rule 16 (stmt -> RETURN .)
    RETURN          reduce using rule 16 (stmt -> RETURN .)
    PRINT           reduce using rule 16 (stmt -> RETURN .)
    WHILE           reduce using rule 16 (stmt -> RETURN .)
    FOR             reduce using rule 16 (stmt -> RETURN .)
    IF              reduce using rule 16 (stmt -> RETURN .)
    LBRACKET        reduce using rule 16 (stmt -> RETURN .)
    ELSE            reduce using rule 16 (stmt -> RETURN .)
    LPARENT         shift and go to state 11
    FLOAT           shift and go to state 26
    CONSTANT        shift and go to state 7
    VAR             shift and go to state 35
    UNARYMINUS      shift and go to state 27
    INC             shift and go to state 33
    DEC             shift and go to state 8
    NOT             shift and go to state 31
    BLTIN           shift and go to state 18

  ! LPARENT         [ reduce using rule 16 (stmt -> RETURN .) ]
  ! FLOAT           [ reduce using rule 16 (stmt -> RETURN .) ]
  ! CONSTANT        [ reduce using rule 16 (stmt -> RETURN .) ]
  ! VAR             [ reduce using rule 16 (stmt -> RETURN .) ]
  ! UNARYMINUS      [ reduce using rule 16 (stmt -> RETURN .) ]
  ! INC             [ reduce using rule 16 (stmt -> RETURN .) ]
  ! DEC             [ reduce using rule 16 (stmt -> RETURN .) ]
  ! NOT             [ reduce using rule 16 (stmt -> RETURN .) ]
  ! BLTIN           [ reduce using rule 16 (stmt -> RETURN .) ]

    unaryop                        shift and go to state 15
    expr                           shift and go to state 36
    callfunc                       shift and go to state 25
    asgn                           shift and go to state 34
    mathop                         shift and go to state 28
    binaryop                       shift and go to state 29
    logicop                        shift and go to state 9
    data                           shift and go to state 21

state 4

    (23) stmt -> LBRACKET . stmtlist RBRACKET
    (27) stmtlist -> . empty
    (28) stmtlist -> . stmtlist newline
    (29) stmtlist -> . stmtlist stmt
    (76) empty -> .

    RBRACKET        reduce using rule 76 (empty -> .)
    NEWLINE         reduce using rule 76 (empty -> .)
    RETURN          reduce using rule 76 (empty -> .)
    PRINT           reduce using rule 76 (empty -> .)
    WHILE           reduce using rule 76 (empty -> .)
    FOR             reduce using rule 76 (empty -> .)
    IF              reduce using rule 76 (empty -> .)
    LBRACKET        reduce using rule 76 (empty -> .)
    LPARENT         reduce using rule 76 (empty -> .)
    FLOAT           reduce using rule 76 (empty -> .)
    CONSTANT        reduce using rule 76 (empty -> .)
    VAR             reduce using rule 76 (empty -> .)
    UNARYMINUS      reduce using rule 76 (empty -> .)
    INC             reduce using rule 76 (empty -> .)
    DEC             reduce using rule 76 (empty -> .)
    NOT             reduce using rule 76 (empty -> .)
    BLTIN           reduce using rule 76 (empty -> .)

    empty                          shift and go to state 38
    stmtlist                       shift and go to state 37

state 5

    (19) stmt -> WHILE . LPARENT cond RPARENT stmt end

    LPARENT         shift and go to state 39


state 6

    (18) stmt -> PRINT . prlist
    (63) prlist -> . expr
    (64) prlist -> . STRING
    (65) prlist -> . prlist COMMA expr
    (66) prlist -> . prlist COMMA STRING
    (30) expr -> . data
    (31) expr -> . asgn
    (32) expr -> . unaryop
    (33) expr -> . binaryop
    (34) expr -> . LPARENT expr RPARENT
    (35) expr -> . callfunc
    (36) data -> . FLOAT
    (37) data -> . CONSTANT
    (38) data -> . VAR
    (9) asgn -> . VAR ASSIGN expr
    (10) asgn -> . VAR ADDEQ expr
    (11) asgn -> . VAR SUBEQ expr
    (12) asgn -> . VAR MULEQ expr
    (13) asgn -> . VAR DIVEQ expr
    (14) asgn -> . VAR MODEQ expr
    (39) unaryop -> . UNARYMINUS expr
    (40) unaryop -> . INC VAR
    (41) unaryop -> . DEC VAR
    (42) unaryop -> . VAR INC
    (43) unaryop -> . VAR DEC
    (44) unaryop -> . NOT expr
    (45) binaryop -> . mathop
    (46) binaryop -> . logicop
    (61) callfunc -> . BLTIN begin LPARENT expr RPARENT
    (62) callfunc -> . VAR begin LPARENT arglist RPARENT
    (47) mathop -> . expr EXP expr
    (48) mathop -> . expr PLUS expr
    (49) mathop -> . expr MINUS expr
    (50) mathop -> . expr TIMES expr
    (51) mathop -> . expr DIVIDE expr
    (52) mathop -> . expr MOD expr
    (53) logicop -> . expr LT expr
    (54) logicop -> . expr GT expr
    (55) logicop -> . expr LE expr
    (56) logicop -> . expr GE expr
    (57) logicop -> . expr EQ expr
    (58) logicop -> . expr NE expr
    (59) logicop -> . expr OR expr
    (60) logicop -> . expr AND expr

    STRING          shift and go to state 40
    LPARENT         shift and go to state 11
    FLOAT           shift and go to state 26
    CONSTANT        shift and go to state 7
    VAR             shift and go to state 35
    UNARYMINUS      shift and go to state 27
    INC             shift and go to state 33
    DEC             shift and go to state 8
    NOT             shift and go to state 31
    BLTIN           shift and go to state 18

    unaryop                        shift and go to state 15
    expr                           shift and go to state 41
    callfunc                       shift and go to state 25
    asgn                           shift and go to state 34
    prlist                         shift and go to state 42
    mathop                         shift and go to state 28
    binaryop                       shift and go to state 29
    logicop                        shift and go to state 9
    data                           shift and go to state 21

state 7

    (37) data -> CONSTANT .

    EXP             reduce using rule 37 (data -> CONSTANT .)
    PLUS            reduce using rule 37 (data -> CONSTANT .)
    MINUS           reduce using rule 37 (data -> CONSTANT .)
    TIMES           reduce using rule 37 (data -> CONSTANT .)
    DIVIDE          reduce using rule 37 (data -> CONSTANT .)
    MOD             reduce using rule 37 (data -> CONSTANT .)
    LT              reduce using rule 37 (data -> CONSTANT .)
    GT              reduce using rule 37 (data -> CONSTANT .)
    LE              reduce using rule 37 (data -> CONSTANT .)
    GE              reduce using rule 37 (data -> CONSTANT .)
    EQ              reduce using rule 37 (data -> CONSTANT .)
    NE              reduce using rule 37 (data -> CONSTANT .)
    OR              reduce using rule 37 (data -> CONSTANT .)
    AND             reduce using rule 37 (data -> CONSTANT .)
    NEWLINE         reduce using rule 37 (data -> CONSTANT .)
    RBRACKET        reduce using rule 37 (data -> CONSTANT .)
    RETURN          reduce using rule 37 (data -> CONSTANT .)
    PRINT           reduce using rule 37 (data -> CONSTANT .)
    WHILE           reduce using rule 37 (data -> CONSTANT .)
    FOR             reduce using rule 37 (data -> CONSTANT .)
    IF              reduce using rule 37 (data -> CONSTANT .)
    LBRACKET        reduce using rule 37 (data -> CONSTANT .)
    LPARENT         reduce using rule 37 (data -> CONSTANT .)
    FLOAT           reduce using rule 37 (data -> CONSTANT .)
    CONSTANT        reduce using rule 37 (data -> CONSTANT .)
    VAR             reduce using rule 37 (data -> CONSTANT .)
    UNARYMINUS      reduce using rule 37 (data -> CONSTANT .)
    INC             reduce using rule 37 (data -> CONSTANT .)
    DEC             reduce using rule 37 (data -> CONSTANT .)
    NOT             reduce using rule 37 (data -> CONSTANT .)
    BLTIN           reduce using rule 37 (data -> CONSTANT .)
    ELSE            reduce using rule 37 (data -> CONSTANT .)
    COMMA           reduce using rule 37 (data -> CONSTANT .)
    RPARENT         reduce using rule 37 (data -> CONSTANT .)
    SEMICOLON       reduce using rule 37 (data -> CONSTANT .)


state 8

    (41) unaryop -> DEC . VAR

    VAR             shift and go to state 43


state 9

    (46) binaryop -> logicop .

    EXP             reduce using rule 46 (binaryop -> logicop .)
    PLUS            reduce using rule 46 (binaryop -> logicop .)
    MINUS           reduce using rule 46 (binaryop -> logicop .)
    TIMES           reduce using rule 46 (binaryop -> logicop .)
    DIVIDE          reduce using rule 46 (binaryop -> logicop .)
    MOD             reduce using rule 46 (binaryop -> logicop .)
    LT              reduce using rule 46 (binaryop -> logicop .)
    GT              reduce using rule 46 (binaryop -> logicop .)
    LE              reduce using rule 46 (binaryop -> logicop .)
    GE              reduce using rule 46 (binaryop -> logicop .)
    EQ              reduce using rule 46 (binaryop -> logicop .)
    NE              reduce using rule 46 (binaryop -> logicop .)
    OR              reduce using rule 46 (binaryop -> logicop .)
    AND             reduce using rule 46 (binaryop -> logicop .)
    SEMICOLON       reduce using rule 46 (binaryop -> logicop .)
    NEWLINE         reduce using rule 46 (binaryop -> logicop .)
    RBRACKET        reduce using rule 46 (binaryop -> logicop .)
    RETURN          reduce using rule 46 (binaryop -> logicop .)
    PRINT           reduce using rule 46 (binaryop -> logicop .)
    WHILE           reduce using rule 46 (binaryop -> logicop .)
    FOR             reduce using rule 46 (binaryop -> logicop .)
    IF              reduce using rule 46 (binaryop -> logicop .)
    LBRACKET        reduce using rule 46 (binaryop -> logicop .)
    LPARENT         reduce using rule 46 (binaryop -> logicop .)
    FLOAT           reduce using rule 46 (binaryop -> logicop .)
    CONSTANT        reduce using rule 46 (binaryop -> logicop .)
    VAR             reduce using rule 46 (binaryop -> logicop .)
    UNARYMINUS      reduce using rule 46 (binaryop -> logicop .)
    INC             reduce using rule 46 (binaryop -> logicop .)
    DEC             reduce using rule 46 (binaryop -> logicop .)
    NOT             reduce using rule 46 (binaryop -> logicop .)
    BLTIN           reduce using rule 46 (binaryop -> logicop .)
    ELSE            reduce using rule 46 (binaryop -> logicop .)
    RPARENT         reduce using rule 46 (binaryop -> logicop .)
    COMMA           reduce using rule 46 (binaryop -> logicop .)


state 10

    (8) list -> list COMMENT . newline
    (77) newline -> . NEWLINE

    NEWLINE         shift and go to state 12

    newline                        shift and go to state 44

state 11

    (34) expr -> LPARENT . expr RPARENT
    (30) expr -> . data
    (31) expr -> . asgn
    (32) expr -> . unaryop
    (33) expr -> . binaryop
    (34) expr -> . LPARENT expr RPARENT
    (35) expr -> . callfunc
    (36) data -> . FLOAT
    (37) data -> . CONSTANT
    (38) data -> . VAR
    (9) asgn -> . VAR ASSIGN expr
    (10) asgn -> . VAR ADDEQ expr
    (11) asgn -> . VAR SUBEQ expr
    (12) asgn -> . VAR MULEQ expr
    (13) asgn -> . VAR DIVEQ expr
    (14) asgn -> . VAR MODEQ expr
    (39) unaryop -> . UNARYMINUS expr
    (40) unaryop -> . INC VAR
    (41) unaryop -> . DEC VAR
    (42) unaryop -> . VAR INC
    (43) unaryop -> . VAR DEC
    (44) unaryop -> . NOT expr
    (45) binaryop -> . mathop
    (46) binaryop -> . logicop
    (61) callfunc -> . BLTIN begin LPARENT expr RPARENT
    (62) callfunc -> . VAR begin LPARENT arglist RPARENT
    (47) mathop -> . expr EXP expr
    (48) mathop -> . expr PLUS expr
    (49) mathop -> . expr MINUS expr
    (50) mathop -> . expr TIMES expr
    (51) mathop -> . expr DIVIDE expr
    (52) mathop -> . expr MOD expr
    (53) logicop -> . expr LT expr
    (54) logicop -> . expr GT expr
    (55) logicop -> . expr LE expr
    (56) logicop -> . expr GE expr
    (57) logicop -> . expr EQ expr
    (58) logicop -> . expr NE expr
    (59) logicop -> . expr OR expr
    (60) logicop -> . expr AND expr

    LPARENT         shift and go to state 11
    FLOAT           shift and go to state 26
    CONSTANT        shift and go to state 7
    VAR             shift and go to state 35
    UNARYMINUS      shift and go to state 27
    INC             shift and go to state 33
    DEC             shift and go to state 8
    NOT             shift and go to state 31
    BLTIN           shift and go to state 18

    unaryop                        shift and go to state 15
    expr                           shift and go to state 45
    callfunc                       shift and go to state 25
    asgn                           shift and go to state 34
    mathop                         shift and go to state 28
    binaryop                       shift and go to state 29
    logicop                        shift and go to state 9
    data                           shift and go to state 21

state 12

    (77) newline -> NEWLINE .

    error           reduce using rule 77 (newline -> NEWLINE .)
    COMMENT         reduce using rule 77 (newline -> NEWLINE .)
    NEWLINE         reduce using rule 77 (newline -> NEWLINE .)
    FUNC            reduce using rule 77 (newline -> NEWLINE .)
    PROC            reduce using rule 77 (newline -> NEWLINE .)
    VAR             reduce using rule 77 (newline -> NEWLINE .)
    RETURN          reduce using rule 77 (newline -> NEWLINE .)
    PRINT           reduce using rule 77 (newline -> NEWLINE .)
    WHILE           reduce using rule 77 (newline -> NEWLINE .)
    FOR             reduce using rule 77 (newline -> NEWLINE .)
    IF              reduce using rule 77 (newline -> NEWLINE .)
    LBRACKET        reduce using rule 77 (newline -> NEWLINE .)
    LPARENT         reduce using rule 77 (newline -> NEWLINE .)
    FLOAT           reduce using rule 77 (newline -> NEWLINE .)
    CONSTANT        reduce using rule 77 (newline -> NEWLINE .)
    UNARYMINUS      reduce using rule 77 (newline -> NEWLINE .)
    INC             reduce using rule 77 (newline -> NEWLINE .)
    DEC             reduce using rule 77 (newline -> NEWLINE .)
    NOT             reduce using rule 77 (newline -> NEWLINE .)
    BLTIN           reduce using rule 77 (newline -> NEWLINE .)
    $end            reduce using rule 77 (newline -> NEWLINE .)
    RBRACKET        reduce using rule 77 (newline -> NEWLINE .)


state 13

    (4) list -> list asgn . newline
    (31) expr -> asgn .
    (77) newline -> . NEWLINE

  ! shift/reduce conflict for NEWLINE resolved as shift
    EXP             reduce using rule 31 (expr -> asgn .)
    PLUS            reduce using rule 31 (expr -> asgn .)
    MINUS           reduce using rule 31 (expr -> asgn .)
    TIMES           reduce using rule 31 (expr -> asgn .)
    DIVIDE          reduce using rule 31 (expr -> asgn .)
    MOD             reduce using rule 31 (expr -> asgn .)
    LT              reduce using rule 31 (expr -> asgn .)
    GT              reduce using rule 31 (expr -> asgn .)
    LE              reduce using rule 31 (expr -> asgn .)
    GE              reduce using rule 31 (expr -> asgn .)
    EQ              reduce using rule 31 (expr -> asgn .)
    NE              reduce using rule 31 (expr -> asgn .)
    OR              reduce using rule 31 (expr -> asgn .)
    AND             reduce using rule 31 (expr -> asgn .)
    NEWLINE         shift and go to state 12

  ! NEWLINE         [ reduce using rule 31 (expr -> asgn .) ]

    newline                        shift and go to state 46

state 14

    (20) stmt -> FOR . LPARENT cond SEMICOLON cond SEMICOLON cond RPARENT stmt end

    LPARENT         shift and go to state 47


state 15

    (32) expr -> unaryop .

    EXP             reduce using rule 32 (expr -> unaryop .)
    PLUS            reduce using rule 32 (expr -> unaryop .)
    MINUS           reduce using rule 32 (expr -> unaryop .)
    TIMES           reduce using rule 32 (expr -> unaryop .)
    DIVIDE          reduce using rule 32 (expr -> unaryop .)
    MOD             reduce using rule 32 (expr -> unaryop .)
    LT              reduce using rule 32 (expr -> unaryop .)
    GT              reduce using rule 32 (expr -> unaryop .)
    LE              reduce using rule 32 (expr -> unaryop .)
    GE              reduce using rule 32 (expr -> unaryop .)
    EQ              reduce using rule 32 (expr -> unaryop .)
    NE              reduce using rule 32 (expr -> unaryop .)
    OR              reduce using rule 32 (expr -> unaryop .)
    AND             reduce using rule 32 (expr -> unaryop .)
    NEWLINE         reduce using rule 32 (expr -> unaryop .)
    RBRACKET        reduce using rule 32 (expr -> unaryop .)
    RETURN          reduce using rule 32 (expr -> unaryop .)
    PRINT           reduce using rule 32 (expr -> unaryop .)
    WHILE           reduce using rule 32 (expr -> unaryop .)
    FOR             reduce using rule 32 (expr -> unaryop .)
    IF              reduce using rule 32 (expr -> unaryop .)
    LBRACKET        reduce using rule 32 (expr -> unaryop .)
    LPARENT         reduce using rule 32 (expr -> unaryop .)
    FLOAT           reduce using rule 32 (expr -> unaryop .)
    CONSTANT        reduce using rule 32 (expr -> unaryop .)
    VAR             reduce using rule 32 (expr -> unaryop .)
    UNARYMINUS      reduce using rule 32 (expr -> unaryop .)
    INC             reduce using rule 32 (expr -> unaryop .)
    DEC             reduce using rule 32 (expr -> unaryop .)
    NOT             reduce using rule 32 (expr -> unaryop .)
    BLTIN           reduce using rule 32 (expr -> unaryop .)
    ELSE            reduce using rule 32 (expr -> unaryop .)
    COMMA           reduce using rule 32 (expr -> unaryop .)
    RPARENT         reduce using rule 32 (expr -> unaryop .)
    SEMICOLON       reduce using rule 32 (expr -> unaryop .)


state 16

    (2) list -> list newline .

    error           reduce using rule 2 (list -> list newline .)
    COMMENT         reduce using rule 2 (list -> list newline .)
    NEWLINE         reduce using rule 2 (list -> list newline .)
    FUNC            reduce using rule 2 (list -> list newline .)
    PROC            reduce using rule 2 (list -> list newline .)
    VAR             reduce using rule 2 (list -> list newline .)
    RETURN          reduce using rule 2 (list -> list newline .)
    PRINT           reduce using rule 2 (list -> list newline .)
    WHILE           reduce using rule 2 (list -> list newline .)
    FOR             reduce using rule 2 (list -> list newline .)
    IF              reduce using rule 2 (list -> list newline .)
    LBRACKET        reduce using rule 2 (list -> list newline .)
    LPARENT         reduce using rule 2 (list -> list newline .)
    FLOAT           reduce using rule 2 (list -> list newline .)
    CONSTANT        reduce using rule 2 (list -> list newline .)
    UNARYMINUS      reduce using rule 2 (list -> list newline .)
    INC             reduce using rule 2 (list -> list newline .)
    DEC             reduce using rule 2 (list -> list newline .)
    NOT             reduce using rule 2 (list -> list newline .)
    BLTIN           reduce using rule 2 (list -> list newline .)
    $end            reduce using rule 2 (list -> list newline .)


state 17

    (5) list -> list stmt . newline
    (77) newline -> . NEWLINE

    NEWLINE         shift and go to state 12

    newline                        shift and go to state 48

state 18

    (61) callfunc -> BLTIN . begin LPARENT expr RPARENT
    (25) begin -> .

    LPARENT         reduce using rule 25 (begin -> .)

    begin                          shift and go to state 49

state 19

    (67) defn -> FUNC . procname LPARENT formals RPARENT stmt
    (69) procname -> . VAR

    VAR             shift and go to state 51

    procname                       shift and go to state 50

state 20
